fix distorted text on hero page

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,7 +1,26 @@
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.1em;
+  font-size: 16px;
   font-weight: 400;
+}
+
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus,
+textarea {
+  font-size: 16px;
 }
 
 .navbar {
@@ -73,12 +92,6 @@ body {
   color: #000 !important;
   border-color: #fdc402 !important;
   box-shadow: none;
-}
-
-.edu-logo img {
-  width: 100px;
-  margin-top: 17em;
-  margin-right: 5em;
 }
 
 .form {
